--- a/project.config.json
+++ b/project.config.json
@@ -57,6 +57,13 @@
 					"pathName": "pages/investigation/investigation",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": 3,
+					"name": "活动详情页",
+					"pathName": "pages/contestant/contestant",
+					"query": "id=72527ac65df9d88e047d72705937e830&serial=1",
+					"scene": null
 				}
 			]
 		}
