--- a/project.config.json
+++ b/project.config.json
@@ -64,6 +64,13 @@
 					"pathName": "pages/contestant/contestant",
 					"query": "id=72527ac65df9d88e047d72705937e830&serial=1",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "活动页",
+					"pathName": "pages/vote/vote",
+					"query": "id=01ace4015df9d7dd047c1284495d2a9a",
+					"scene": null
 				}
 			]
 		}
